--- a/app/assets/stylesheets/stylus/splash.styl
+++ b/app/assets/stylesheets/stylus/splash.styl
@@ -6,6 +6,7 @@
   background -webkit-gradient(linear,left top,left bottom,color-stop(-60%,#f037a5),color-stop(140%,#fae62d))
   background linear-gradient(#f037a5 -60%,#fae62d 140%)
   color $white
+  overflow hidden
   & h4
     margin-bottom 30px
 
